Store Display Name on Match Object
